--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,16 +1,3 @@
+key.json
+
 .venv/
-
-*.pyc
-__pycache__/
-
-instance/
-
-.pytest_cache/
-.coverage
-htmlcov/
-
-dist/
-build/
-*.egg-info/
-
-llm-pii-masking-app/key.json
