--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.2.0
+bcrypt==4.1.2
 CacheControl==0.13.1
 cachetools==5.3.2
 certifi==2023.11.17
@@ -7,6 +8,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.2
+ecdsa==0.18.0
 exceptiongroup==1.2.0
 fastapi==0.109.0
 firebase-admin==6.4.0
@@ -27,6 +29,7 @@ httplib2==0.22.0
 httptools==0.6.1
 idna==3.6
 msgpack==1.0.7
+passlib==1.7.4
 proto-plus==1.23.0
 protobuf==4.25.2
 pyasn1==0.5.1
@@ -37,9 +40,12 @@ pydantic_core==2.16.1
 PyJWT==2.8.0
 pyparsing==3.1.1
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.7
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.35.1
 typing_extensions==4.9.0
