--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,13 @@
+fastapi==0.110.0
+firebase_admin==6.4.0
+jose==1.0.0
+openai==0.28.0
+passlib==1.7.4
+pydantic==2.6.3
+python-dotenv==1.0.1
+python_jose==3.3.0
+Requests==2.31.0
+spacy==3.6.1
 annotated-types==0.6.0
 anyio==4.2.0
 bcrypt==4.1.2
