--- a/pii-masking-gui/package.json
+++ b/pii-masking-gui/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.12.0"
