--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,21 +37,23 @@ httplib2==0.22.0
 httptools==0.6.1
 idna==3.6
 msgpack==1.0.7
+passlib==1.7.4
 proto-plus==1.23.0
 protobuf==4.25.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
-pydantic_core==2.16.1
 PyJWT==2.8.0
 pyparsing==3.1.1
+python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.7
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
-starlette==0.35.1
+starlette==0.36.3
 typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.2.0
