--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,9 @@
-fastapi==0.110.0
-firebase_admin==6.4.0
-jose==1.0.0
-openai==0.28.0
-passlib==1.7.4
-pydantic==2.6.3
-python-dotenv==1.0.1
-python_jose==3.3.0
-Requests==2.31.0
+aiohttp==3.9.3
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
+attrs==23.2.0
 bcrypt==4.1.2
 CacheControl==0.13.1
 cachetools==5.3.2
@@ -19,7 +14,9 @@ click==8.1.7
 cryptography==42.0.2
 ecdsa==0.18.0
 exceptiongroup==1.2.0
+fastapi==0.110.0
 firebase-admin==6.4.0
+frozenlist==1.4.1
 google-api-core==2.16.1
 google-api-python-client==2.116.0
 google-auth==2.27.0
@@ -33,18 +30,29 @@ googleapis-common-protos==1.62.0
 grpcio==1.60.0
 grpcio-status==1.60.0
 h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
+httpx==0.27.0
 idna==3.6
+iniconfig==2.0.0
+jose==1.0.0
 msgpack==1.0.7
+multidict==6.0.5
+openai==0.28.0
+packaging==24.0
 passlib==1.7.4
+pluggy==1.4.0
 proto-plus==1.23.0
 protobuf==4.25.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydantic==2.6.3
+pydantic_core==2.16.3
 PyJWT==2.8.0
 pyparsing==3.1.1
+pytest==8.1.1
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.7
@@ -54,6 +62,8 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 starlette==0.36.3
+tomli==2.0.1
+tqdm==4.66.2
 typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.2.0
@@ -61,3 +71,4 @@ uvicorn==0.27.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+yarl==1.9.4
